# MangaCouch

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  config.example.toml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_download_job_attempts.py
docker/: entrypoint.sh
docs/: README.md  decisions.md  design-spec.md  ehentai-protocol.md  feedback.md  requirements.md
extension/: README.md  background.js  common.js  manifest.json  options.html  options.js  popup.css  popup.html  popup.js
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  endpoints.ts  types.ts
frontend/src/components/: ArchiveCard.tsx  Layout.tsx  SearchBar.tsx  SmartImage.tsx  Toast.tsx  ui.tsx
frontend/src/hooks/: useApi.ts  useAuth.tsx  useTheme.tsx
frontend/src/i18n/: strings.ts
frontend/src/lib/: storage.ts  tags.ts
frontend/src/reader/: PagedView.tsx  ReaderSettingsPanel.tsx  ScrollView.tsx  settings.ts  spreads.ts  useReader.ts  useZoom.ts
frontend/src/routes/: Detail.tsx  Downloads.tsx  Library.tsx  LockScreen.tsx  Reader.tsx  Settings.tsx
frontend/src/styles/: global.css
packaging/: entry.py  mangacouch.spec
plugins/: README.md  sample_uppercase_metadata.py.example
src/mangacouch/: __init__.py  __main__.py  app.py  cli.py  config.py  state.py
src/mangacouch/acquisition/: __init__.py  client.py  ehentai.py  queue.py  ratelimit.py
src/mangacouch/api/: __init__.py  deps.py  serialization.py
src/mangacouch/api/routers/: admin.py  archives.py  auth.py  categories.py  downloads.py  favorites.py  opds.py  plugins.py  tags.py  upload.py
src/mangacouch/auth/: __init__.py  crypto.py  security.py
src/mangacouch/core/: __init__.py  archives.py  hashing.py  imaging.py  naturalsort.py  sidecars.py  thumbnails.py
src/mangacouch/db/: __init__.py  base.py  models.py
src/mangacouch/ingest/: __init__.py  pipeline.py  watcher.py
src/mangacouch/plugins/: __init__.py  base.py  registry.py
src/mangacouch/plugins/builtin/: __init__.py  ehentai_download.py  ehentai_login.py  ehentai_metadata.py  hitomi_metadata.py  nhentai_metadata.py
src/mangacouch/search/: __init__.py  index.py  query.py  service.py
src/mangacouch/tags/: __init__.py  translation.py
src/mangacouch/testing/: __init__.py  mockdata.py
tests/: conftest.py  test_api.py  test_ehentai.py  test_hashing.py  test_ingest.py  test_metadata_plugins.py  test_pageorder.py  test_query.py  test_sidecars.py
